--- a/mission_control.html
+++ b/mission_control.html
@@ -18,7 +18,7 @@
         #main-canvas-container { cursor: grab; position: relative; }
         #main-canvas-container.planning-mode { cursor: crosshair; }
         /* Custom slider styles */
-        input[type=range] { -webkit-appearance: none; background: transparent; width: 100%; }
+        input[type=range] { -webkit-appearance: none; appearance: none; background: transparent; width: 100%; }
         input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; height: 20px; width: 20px; border-radius: 50%; background: #0B3D91; cursor: pointer; margin-top: -8px; }
         input[type=range]::-webkit-slider-runnable-track { width: 100%; height: 4px; cursor: pointer; background: #9ca3af; border-radius: 5px; }
         /* Camera controls */
